--- a/PASS_transreid/configs/msmt17/vit_base.yml
+++ b/PASS_transreid/configs/msmt17/vit_base.yml
@@ -1,5 +1,6 @@
 MODEL:
-  PRETRAIN_PATH: "../../pre_trained_model/pass_vit_base_full.pth"
+  #PRETRAIN_PATH: "../../pre_trained_model/pass_vit_base_full.pth"
+  PRETRAIN_PATH: "../pre_trained_model/pass_vit_base_full.pth"
   PRETRAIN_HW_RATIO: 2
   METRIC_LOSS_TYPE: 'triplet'
   IF_LABELSMOOTH: 'off'
@@ -23,7 +24,8 @@ INPUT:
 
 DATASETS:
   NAMES: ('msmt17')
-  ROOT_DIR: ('/userhome/zhukuan/data/')
+#  ROOT_DIR: ('/userhome/zhukuan/data/')
+  ROOT_DIR: ('/home/ma1/work/PASS-reID/data/')
 
 DATALOADER:
   SAMPLER: 'softmax_triplet'
