--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pytorch-ignite==0.1.2
 PyYAML==5.4.1
 scikit-image==0.16.2
 scikit-learn==0.23.1
-scipy==1.2.0
+scipy
 six==1.16.0
 sklearn==0.0
 timm==0.3.4
